[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
chia-protocol = "0.17.0"
clvm-traits = { version = "0.17.0", features = ["derive"] }
clvm-utils = "0.17.0"
hex-literal = "0.4.1"
clvmr = "0.10.0"
chia = "0.17.0"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.11"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", rev = "e638776544fd110426125193c373e3f77cf96e79" }

[dev-dependencies]
anyhow = "1.0.95"
