[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
chia-protocol = "0.17.0"
clvm-traits = { version = "0.17.0", features = ["derive"] }
clvm-utils = "0.17.0"
hex-literal = "0.4.1"
clvmr = "0.10.0"
chia = "0.17.0"
clap = { version = "4.5.27", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.11"
dirs = "5.0"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bech32 = "0.9.1"
chrono = "0.4.39"
indexmap = { version = "2.0", features = ["serde"] }

chia-wallet-sdk = { git = "https://github.com/xch-dev/chia-wallet-sdk.git", rev = "cf1080e3d30c061e4d8a62e36c41abf2ce2310bb" }
sage-api = { version = "0.9.5", git = "https://github.com/xch-dev/sage.git" }

[dev-dependencies]
anyhow = "1.0.95"