[package]
name = "streaming"
version = "0.1.0"
edition = "2021"

[dependencies]
chia-protocol = "0.22.0"
clvm-traits = { version = "0.22.0", features = ["derive"] }
clvm-utils = "0.22.0"
hex-literal = "1.0.0"
clvmr = "0.13.1"
chia = "0.22.0"
clap = { version = "4.5.38", features = ["derive"] }
hex = "0.4.3"
thiserror = "2.0.12"
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
tokio = { version = "1.45.0", features = ["full"] }
bech32 = "0.11.0"
chrono = "0.4.41"
indexmap = { version = "2.9.0", features = ["serde"] }

chia-wallet-sdk = { version = "0.23.0", git = "https://github.com/xch-dev/chia-wallet-sdk.git"}
sage-api = { version = "0.10.2", git = "https://github.com/xch-dev/sage.git" }

[dev-dependencies]
anyhow = "1.0.95"